Small refactor to fix bug of not centered text

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -25,6 +25,7 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
     text-decoration: underline;
+    text-align: center;
 }
 .about-description{
     font-family: 'Poppins', sans-serif;
